[package]
name = "distlock"
version = "0.1.0"
edition = "2024"


[lib]
name = "distlock"
path = "src/lib.rs"

[[bin]]
name = "distlock-server"
path = "src/bin/server/main.rs"

[dependencies]
axum = "0.7"
async-raft = "0.6.1"
raft = "0.7"
protobuf = "3.0"
bytes = "1.0"
async-trait = "0.1"
tower = "0.4"
tower-http = {version = "0.4" , features = ["trace"]}
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
rstest = "0.18"
tokio-test = "0.4"

